5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1764_2390.log
== TEST (2019-05-30 00:51:28) 
-- CODE:
from numpy import*
pmes = array(eval(input()))
fmes = array(eval(input()))
g = arange(size(pmes), dtype = int)
i = 0
k = 1
h = 1
while i < size(g):
	g[i] = pmes[i] - fmes[i]
	if g[i] < max(g):
		k += 1
	else:
		h += 1
	i += 1
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:51:56) 
-- CODE:
from numpy import*
pmes = array(eval(input()))
fmes = array(eval(input()))
g = arange(size(pmes), dtype = int)
i = 0
k = 1
h = 1
while i < size(g):
	g[i] = pmes[i] - fmes[i]
	if g[i] < max(g):
		k += 1
	else:
		h += 1
	i += 1
print(h)
-- EXECUTION TIME:
0.469492
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:53:41) 
-- CODE:
from numpy import*
pmes = array(eval(input()))
fmes = array(eval(input()))
g = arange(size(pmes))
i = 0
k = 1
h = 1
while i < size(g):
	g[i] = pmes[i] - fmes[i]
	if g[i] < max(g):
		k += 1
	else:
		h += 1
	i += 1
print(h)
-- EXECUTION TIME:
0.64191
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:53:43) 
-- CODE:
from numpy import*
pmes = array(eval(input()))
fmes = array(eval(input()))
g = arange(size(pmes))
i = 0
k = 1
h = 1
while i < size(g):
	g[i] = pmes[i] - fmes[i]
	if g[i] < max(g):
		k += 1
	else:
		h += 1
	i += 1
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:53:47) 
-- CODE:
from numpy import*
pmes = array(eval(input()))
fmes = array(eval(input()))
g = arange(size(pmes))
i = 0
k = 1
h = 1
while i < size(g):
	g[i] = pmes[i] - fmes[i]
	if g[i] < max(g):
		k += 1
	else:
		h += 1
	i += 1
print(h)
-- EXECUTION TIME:
0.343045
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:53:51) 
-- CODE:
from numpy import*
pmes = array(eval(input()))
fmes = array(eval(input()))
g = arange(size(pmes))
i = 0
k = 1
h = 1
while i < size(g):
	g[i] = pmes[i] - fmes[i]
	if g[i] < max(g):
		k += 1
	else:
		h += 1
	i += 1
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:54:19) 
-- CODE:
from numpy import*
pmes = array(eval(input()))
fmes = array(eval(input()))
g = arange(size(pmes))
i = 0
k = 1
h = 1
while i < size(g):
	g[i] = pmes[i] - fmes[i]
	if g[i] < max(g):
		k += 1
	else:
		h += 1
	i += 1
print(h)
-- EXECUTION TIME:
0.352015
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:54:20) 
-- CODE:
from numpy import*
pmes = array(eval(input()))
fmes = array(eval(input()))
g = arange(size(pmes))
i = 0
k = 1
h = 1
while i < size(g):
	g[i] = pmes[i] - fmes[i]
	if g[i] < max(g):
		k += 1
	else:
		h += 1
	i += 1
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:54:42) 
-- CODE:
from numpy import*
pmes = array(eval(input()))
fmes = array(eval(input()))
g = arange(size(pmes))
i = 0
k = 1
h = 1
while i < size(g):
	g[i] = pmes[i] - fmes[i]
	if g[i] < max(g):
		k += 1
	else:
		h += 1
	i += 1
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:54:46) 
-- CODE:
from numpy import*
pmes = array(eval(input()))
fmes = array(eval(input()))
g = arange(size(pmes))
i = 0
k = 1
h = 1
while i < size(g):
	g[i] = pmes[i] - fmes[i]
	if g[i] < max(g):
		k += 1
	else:
		h += 1
	i += 1
print(h)
-- EXECUTION TIME:
0.512142
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:55:04) 
-- CODE:
from numpy import*
pmes = array(eval(input()))
fmes = array(eval(input()))

i = 0
k = 1
h = 1
while i < size(g):
	g[i] = pmes[i] - fmes[i]
	if g[i] < max(g):
		k += 1
	else:
		h += 1
	i += 1
print(h)
-- EXECUTION TIME:
0.449976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 8, in <module>
    while i < size(g):
NameError: name 'g' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 13:12:15) 
-- CODE:
from numpy import*
pmes = array(eval(input()))
fmes = array(eval(input()))
g = arange(size(pmes))
i = 0
k = 1
h = 1
while i < size(g):
	g[i] = pmes[i] - fmes[i]
	if g[i] < max(g):
		k += 1
	else:
		h += 1
	i += 1
print(h)
-- EXECUTION TIME:
0.384457
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
